# analytics-mesh

./: .gitignore  Cargo.toml
.github/workflows/: ci-cd.yml
analytics-ui/src/components/: MetricsCard.tsx
analytics-ui/src/services/: prom.ts
enrichment-service/: Cargo.toml  build.rs
enrichment-service/proto/: events.proto
enrichment-service/src/: lib.rs  main.rs
infra/docker/: docker-compose.yml  prometheus.yml
infra/docker/provisioning/dashboards/: analytics-mesh.json  dashboard.yml
ingestion-service/: .gitignore  Cargo.toml  build.rs
ingestion-service/src/: lib.rs  main.rs
sdk-generator/: Cargo.toml
