[package]
name    = "enrichment-service"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
rdkafka = { version = "0.28", features = ["cmake-build"] }
prost        = "0.11"
prost-types  = "0.11"
serde        = { version = "1", features = ["derive"] }
chrono       = "0.4"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1.17"
prost-build = "0.11.9"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
reqwest = { version = "0.12.15", features = ["json"] }
dashmap = "5"
tonic = "0.13.0"
futures = "0.3.31"

# --- add this block -----------------------------
[build-dependencies]
prost-build = "0.11"
# -----------------------------------------------
