[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tonic        = { version = "0.8", features = ["transport"] }
prost        = "0.11"
prost-types  = "0.11"
axum         = "0.6"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tower-http   = { version = "0.3", features = ["trace"] }
rdkafka = { version = "0.28", features = ["cmake-build"] }

[build-dependencies]
tonic-build  = "0.8"