[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tonic        = { version = "0.8", features = ["transport"] }
prost        = "0.11"
prost-types  = "0.11"
axum         = "0.6"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tower-http   = { version = "0.3", features = ["trace"] }
rdkafka = { version = "0.28", features = ["cmake-build"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
anyhow       = "1.0"
reqwest = "0.12.15"
dashmap = "5"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build  = "0.8"